--- a/package.json
+++ b/package.json
@@ -2,18 +2,28 @@
   "name": "intro",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://cazuist.github.io/tests",
+  "homepage": ".",
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "classnames": "^2.3.1",
+    "d3": "^6.7.0",
+    "file-saver": "^2.0.5",
+    "jspdf": "^2.3.1",
+    "jspdf-autotable": "^3.5.14",
+    "moment": "^2.29.1",
     "nanoid": "^3.1.20",
+    "primeicons": "^4.1.0",
+    "primereact": "^6.2.1",
     "prop-types": "^15.7.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.0",
-    "web-vitals": "^0.2.4"
+    "react-transition-group": "^4.4.1",
+    "web-vitals": "^0.2.4",
+    "xlsx": "^0.16.9"
   },
   "scripts": {
     "start": "react-scripts start",
